# mnema

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PRODUCT.md  README.md  SECURITY.md  SUPPORTS.md  UX-AUDIT.md  package.json  pi-session-2026-05-25T13-55-49-251Z_019e5f6b-9f83-783f-9616-6bdb21b1c5ad.html  turbo.json
apps/desktop/src-tauri/: .gitignore  CONTEXT.md  Cargo.toml  Entitlements.mnema-cli.plist  Entitlements.plist  Info.mnema-cli.plist  Info.plist  about.hbs  about.toml  build.rs  mnema.provisionprofile  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: browser-integration-native-host.sh  pi-ask-ai-shim.mjs
apps/desktop/src-tauri/src/: ai_runtime.rs  app_infra.rs  app_updates.rs  ask_ai.rs  audio_transcription_models.rs  broker_authorization_channel.rs  browser_integration_host.rs  cli_access.rs  conversation.rs  crl_refresh.rs  debug_health.rs  debug_pipeline.rs  debug_status.rs  general_app_log.rs  gpu_acceleration.rs  gpu_acceleration_pack.rs  keyboard_bindings.rs  lib.rs  licensing.rs  main.rs  managed_storage_layout.rs  meetings.rs  native_capture.rs  native_capture_browser_url_ax.rs  native_capture_browser_url_uia.rs  native_capture_debug_log.rs  native_capture_foreground_listener.rs  native_capture_inactivity.rs  native_capture_metadata.rs  native_capture_output.rs  native_capture_settings.rs  native_capture_system_idle.rs  ocr_budget.rs  ocr_models.rs  one_time_prompts.rs  ort_dylib.rs  privacy_redaction_sources.rs  secret_vault_test_support.rs  semantic_search_models.rs  semantic_search_query.rs  (+12 more)
crates/ai-runtime/: Cargo.toml
crates/ai-runtime/src/: agent_loop.rs  lib.rs
crates/app-infra/: CONTEXT.md  Cargo.toml  build.rs  revocations.json
crates/app-infra/migrations/: 0001_initial_settings.sql  0002_background_jobs.sql  0003_processing_domain.sql  0004_frame_content_fingerprint.sql  0005_frame_batches.sql  0006_frame_batch_finalize_columns.sql  0007_audio_segments.sql  0008_frame_equivalence.sql  0009_processing_model_cleanup_locks.sql  0010_speaker_analysis.sql  0011_speaker_recognition_rejections.sql  0012_segment_local_speaker_clusters.sql  0013_capture_retention.sql  0014_frame_metadata_snapshots.sql  0015_captured_screen_text.sql  0015_ocr_budget.sql  0015_processing_job_queued_at.sql  0016_search_index_projection.sql  0017_search_document_app_identity.sql  0018_capture_safety_and_secret_redactions.sql  0018_search_document_app_name_search_key.sql  0018_secret_redactions.sql  0019_browser_integration_coverage.sql  0019_secret_redaction_v2_metadata.sql  0020_processing_job_next_attempt_at.sql  0021_processing_job_failure_count.sql  0022_user_context_activities.sql  0023_user_context_conclusions.sql  0024_user_context_confidence_history.sql  0025_user_context_dismissals.sql  0026_user_context_authored.sql  0027_user_context_activity_focus_corrections.sql  0028_conversations.sql  0029_user_context_digests.sql  0030_user_context_digest_headline.sql  0031_generalize_activity_categories.sql  0032_user_context_distillation_gate_drops.sql  0033_conversation_engine_pin.sql  0034_conversation_turn_reasoning.sql  0035_conversation_titles.sql  (+18 more)
crates/app-infra/src/: ai_provider_key_store.rs  audio_segments.rs  brokered_access.rs  brokered_access_cli.rs  capture_index_key_store.rs  capture_retention.rs  capture_safety.rs  captured_frame_equivalence.rs  captured_frame_pipeline.rs  captured_frame_reprocessing.rs  crl_cache.rs  crl_verify.rs  db.rs  error.rs  frame_batch_artifact_cleanup.rs  frame_batch_runtime.rs  frame_batch_store.rs  frame_batches.rs  hidden_segment_workspace.rs  jobs.rs  keychain_service_migration.rs  lexical.rs  lib.rs  license_token_store.rs  license_verify.rs  licensing_state.rs  machine_id.rs  mcp_server_secret_store.rs  meetings.rs  ocr_budget.rs  off_record.rs  receipt_verify.rs  retry_policy.rs  screen_text.rs  search.rs  secret_vault.rs  secret_vault_handle.rs  secret_vault_migration.rs  semantic_search.rs  status.rs  (+5 more)
crates/app-infra/src/conversation/: mod.rs  (+1 more)
crates/audio-transcription/: CONTEXT.md  Cargo.toml
crates/audio-transcription/src/: core.rs  lib.rs  macos_audio_decode.rs
crates/capture-microphone/: Cargo.toml
crates/capture-microphone/examples/: smoke_mic_activity.rs  smoke_mic_m4a.rs  smoke_mic_permission.rs  smoke_support_hotplug.rs  smoke_system_audio_m4a.rs
crates/capture-microphone/src/: lib.rs  windows_microphone.rs
crates/capture-screen/: Cargo.toml
crates/capture-screen/examples/: win_smoke.rs
crates/capture-screen/src/: equivalence.rs  frame_schedule.rs  lib.rs  windows_capture.rs
crates/capture-system-audio/: Cargo.toml
crates/capture-system-audio/src/: activity.rs  exclude.rs  lib.rs  mic_activity.rs  permission.rs  process.rs  rebuild.rs  tap.rs  watchdog.rs  writer.rs
crates/capture-vad/: Cargo.toml
crates/capture-vad/src/: lib.rs  silero_vad.rs  webrtc_vad.rs
crates/capture-writers/: Cargo.toml
crates/capture-writers/src/: lib.rs
crates/cli/: CONTEXT.md  Cargo.toml  build.rs
crates/cli/src/: main.rs  mcp.rs
crates/media-decode/: Cargo.toml
crates/media-decode/src/: lib.rs
crates/ocr/: Cargo.toml
crates/ocr/examples/: README.md  apple_vision_benchmark.rs  paddle_ocr_benchmark.rs  tesseract_benchmark.rs
crates/ocr/src/: lib.rs  paddle.rs  tesseract.rs
crates/semantic-search/: CONTEXT.md  Cargo.toml
crates/semantic-search/src/: lib.rs  models.rs  runtime.rs
crates/semantic-search/tests/: bge_m3_pth_load.rs  candle_parity.rs  candle_synthetic_forward.rs  candle_version_lockstep.rs  cpu_measurement.rs  stella_arctic_parity.rs  stella_arctic_smoke.rs
crates/speaker-analysis/: CONTEXT.md  Cargo.toml
crates/speaker-analysis/docs/: windows-cuda-verification.md
crates/speaker-analysis/src/: core.rs  lib.rs  macos_audio_decode.rs  windows_audio_decode.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  native_capture.rs
(+850 files in other folders)
