[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/app-infra",
    "crates/cli",
    "crates/audio-transcription",
    "crates/speaker-analysis",
    "crates/ocr",
    "crates/capture-runtime",
    "crates/capture-microphone",
    "crates/capture-metadata",
    "crates/capture-screen",
    "crates/capture-types",
    "crates/capture-vad",
    "crates/capture-writers",
    "crates/media-decode",
    "crates/secret-redaction",
]
resolver = "2"
