[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/ai-runtime",
    "crates/app-infra",
    "crates/cli",
    "crates/audio-transcription",
    "crates/speaker-analysis",
    "crates/ocr",
    "crates/semantic-search",
    "crates/capture-runtime",
    "crates/capture-microphone",
    "crates/capture-metadata",
    "crates/capture-screen",
    "crates/capture-types",
    "crates/capture-vad",
    "crates/capture-writers",
    "crates/secret-redaction",
]
resolver = "2"
