[package]
name = "app-infra"
version = "0.1.0"
edition = "2021"

[features]
default = ["audio-speech-silero"]
audio-speech-silero = ["capture-vad/silero"]

[dependencies]
async-trait = "0.1"
audio-transcription = { path = "../audio-transcription" }
speaker-analysis = { path = "../speaker-analysis" }
ocr = { path = "../ocr" }
capture-screen = { path = "../capture-screen" }
capture-metadata = { path = "../capture-metadata" }
capture-runtime = { path = "../capture-runtime" }
capture-types = { path = "../capture-types" }
capture-vad = { path = "../capture-vad", default-features = false }
capture-writers = { path = "../capture-writers" }
secret-redaction = { path = "../secret-redaction" }
chrono = "0.4"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
fs2 = "0.4"
rand = "0.8"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }

# macOS ships SQLCipher-backed bundled SQLite because the capture index key
# store is implemented via Keychain there. Other platforms do not have a
# capture-index key store yet (SUPPORTS.md: "Encrypted Capture Index key
# store: Windows missing"), so they use plain bundled SQLite and the key
# store falls through to a plaintext database on non-macOS targets. Avoiding
# `bundled-sqlcipher` on non-macOS also keeps the build off the OpenSSL/Perl
# toolchain that vendored SQLCipher would otherwise require.
[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["vn", "blocks", "cm", "cv", "macos_15_0"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
