[package]
name = "app-infra"
version = "0.1.0"
edition = "2021"

[features]
default = ["audio-speech-silero"]
audio-speech-silero = ["capture-vad/silero"]

[dependencies]
async-trait = "0.1"
audio-transcription = { path = "../audio-transcription" }
speaker-analysis = { path = "../speaker-analysis" }
ocr = { path = "../ocr" }
capture-screen = { path = "../capture-screen" }
capture-metadata = { path = "../capture-metadata" }
capture-runtime = { path = "../capture-runtime" }
capture-types = { path = "../capture-types" }
capture-vad = { path = "../capture-vad", default-features = false }
capture-writers = { path = "../capture-writers" }
media-decode = { path = "../media-decode" }
secret-redaction = { path = "../secret-redaction" }
chrono = "0.4"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
fs2 = "0.4"
rand = "0.8"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["vn", "blocks", "cm", "cv", "macos_15_0"] }

[target.'cfg(windows)'.dependencies]
# Windows has no system libcrypto for SQLCipher to link against, so build
# OpenSSL from source and link it statically. `bundled-sqlcipher-vendored-openssl`
# adds `openssl-sys/vendored` (via `openssl-src`) on top of the base
# `bundled-sqlcipher` feature; the source build needs Perl + NASM + MSVC, all
# preinstalled on `windows-latest`. macOS/Linux keep the system-linked
# `bundled-sqlcipher` from `[dependencies]`.
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
