[package]
name = "app-infra"
version = "0.1.0"
edition = "2021"

[features]
default = ["audio-speech-silero"]
audio-speech-silero = ["capture-vad/silero"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
ed25519-dalek = "2"
audio-transcription = { path = "../audio-transcription" }
speaker-analysis = { path = "../speaker-analysis" }
ocr = { path = "../ocr" }
capture-screen = { path = "../capture-screen" }
capture-metadata = { path = "../capture-metadata" }
capture-runtime = { path = "../capture-runtime" }
capture-types = { path = "../capture-types" }
capture-vad = { path = "../capture-vad", default-features = false }
capture-writers = { path = "../capture-writers" }
secret-redaction = { path = "../secret-redaction" }
chrono = "0.4"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
log = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
fs2 = "0.4"
rand = "0.8"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
# sqlite-vec compiles sqlite-vec.c with SQLITE_CORE, so it links against the
# host SQLCipher amalgamation (one libsqlite3-sys, no second SQLite) and exposes
# `vec0` as an auto-extension. Registered in db.rs via `sqlite3_auto_extension`.
sqlite-vec = "=0.1.9"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
zstd = "0.13"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["vn", "blocks", "cm", "cv", "macos_15_0"] }
security-framework = "3.7"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
