[package]
name = "capture-microphone"
version = "0.1.0"
edition = "2021"

[dependencies]
capture-types = { path = "../capture-types" }
capture-writers = { path = "../capture-writers" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["av", "async", "blocks", "cm", "core_audio", "dispatch"] }
