[package]
name = "capture-microphone"
version = "0.1.0"
edition = "2021"

[dependencies]
capture-runtime = { path = "../capture-runtime" }
capture-types = { path = "../capture-types" }
capture-writers = { path = "../capture-writers" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["av", "async", "blocks", "cat", "cm", "dispatch"] }
