[package]
name = "capture-microphone"
version = "0.1.0"
edition = "2021"

[dependencies]
capture-runtime = { path = "../capture-runtime" }
capture-types = { path = "../capture-types" }
capture-writers = { path = "../capture-writers" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["av", "async", "blocks", "cat", "cm", "dispatch"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19"
windows = { version = "0.61", features = [ "Win32_Foundation", "Win32_System_Com", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_System_Threading" ] }
