[package]
name = "capture-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
capture-runtime = { path = "../capture-runtime" }
capture-metadata = { path = "../capture-metadata" }
capture-types = { path = "../capture-types" }
capture-writers = { path = "../capture-writers" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["av", "async", "blocks", "cg", "cm", "dispatch", "iio", "sc", "ut", "vt", "macos_15_0"] }
objc2 = "0.6"
objc2-av-foundation = { version = "0.3", default-features = false, features = ["std", "AVCaptureDevice", "AVCaptureFileOutput", "AVCaptureInput", "AVCaptureOutputBase", "AVCaptureSession", "AVMediaFormat"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSError", "NSObject", "NSURL"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Foundation", "Foundation_Metadata",
  "Graphics", "Graphics_Capture", "Graphics_DirectX", "Graphics_DirectX_Direct3D11",
  "Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi",
  "Win32_Media_MediaFoundation", "Win32_System_Com",
  "Win32_System_WinRT", "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
] }
