[package]
name = "capture-writers"
version = "0.1.0"
edition = "2021"

[dependencies]
capture-types = { path = "../capture-types" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", default-features = false, features = ["av", "async", "blocks", "cat", "cm", "dispatch"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [ "Win32_Foundation", "Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant" ] }
