[package]
name = "cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "mnema-cli"
path = "src/main.rs"

[dependencies]
app-infra = { path = "../app-infra", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "time"] }
toon-rs = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
yaml_serde = "0.10"

[dev-dependencies]
tempfile = "3"
