[package]
name = "media-decode"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [ "Win32_Foundation", "Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant" ] }
