[package]
name = "semantic-search"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Apple GPU acceleration. candle's `metal` feature links Metal/MPS; enable it on
# macOS so the embedding forward pass runs on the GPU. The candle runtime tries
# `Device::new_metal(0)` and falls back to CPU at load time regardless, so a
# `metal`-on build still runs on machines without a usable Metal device — but the
# Metal kernels only LINK when this feature is set, so a non-Metal build (CPU
# elsewhere) must leave it off. Verified: candle 0.10.2's feature is named `metal`
# on all three crates.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

[dependencies]
capture-types = { path = "../capture-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Embedding runtime. candle runs the SAME model weights as the retired fastembed
# path on the Apple GPU (Metal) or CPU, behind the pluggable `SemanticSearchBackend`
# trait. Pinned EXACT `=0.10.2` across the three crates so the architecture modules
# (`nomic_bert`, `xlm_roberta`) the catalog dispatches to never drift under us.
candle-core = { version = "=0.10.2" }
candle-nn = { version = "=0.10.2" }
candle-transformers = { version = "=0.10.2" }
# The forward pass tokenizer (loaded with special tokens) and the non-truncating
# split tokenizer (used to compute the 256-token windows above the trait).
#
# `default-features = false` drops the default `esaxx_fast` feature, which builds
# esaxx-rs's C++ with a STATIC CRT (`/MT`). On Windows that collides with the
# tesseract-rs OCR C++ (built `/MD`), failing the desktop link with LNK2038
# ("RuntimeLibrary mismatch"). esaxx is only used to TRAIN unigram models; we only
# load/encode pretrained tokenizers, so dropping it is functionally inert. `onig`
# (the regex pre-tokenizer) is kept and matches candle-core's own tokenizers dep,
# so feature unification resolves to a single esaxx-free build on every platform.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

[dev-dependencies]
tempfile = "3"
